2007-10-25 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/source_base.rb: Now uses mkdir_p to make
    ~/.fantasdic/sources/.

2007-10-25 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Add shortcuts for "Print" and "Print
    Preview"...

2007-10-24 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/command_line.rb: Now uses gettext's function for plural
    forms. Reported by Djihed Afifi (#489593).
    * lib/fantasdic/ui/main_app.rb: Ditto.

2007-10-24 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/preferences_dialog.rb:
    * lib/fantasdic/ui/main_app.rb:
    * data/fantasdic/glade/preferences_dialog.glade: HTTP proxy preferences.
    This is useful for plugins like "google translate".

2007-10-24 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: First click on "cancel" now
    kills the "search available databases" thread if it's still running. In
    that case, a second click is needed to close the window.

2007-10-22 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/edict_file.rb: Fixed typo.

2007-10-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/source_base.rb: Fixed cache support.

2007-10-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Don't update the search entry when a match
    is clicked in the match sidepane.

2007-10-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: The source was not closed
    after using it.

2007-10-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/edict_file.rb: Fixed crash when a word in kana is
    entered.

2007-10-20 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/net/dict.rb: Don't use the dotted line as the end of
    definition marker. This is more reliable.

2007-10-20 Mathieu Blondel <mblondel@svn.gnome.org>
